syntax = "proto3";
option go_package = "ryo29wx/Caol-Ila/interfaces/search";

package search;

service Searcher {
  rpc Search (SearchRequest) returns (SearchResponse) {}
}

message SearchRequest {
  string query = 1;
  int32 page = 2;
}

message SearchResponse {
    repeated ResponseResult response = 1;
    int32 total_num = 2;
}

message ResponseResult {
    string user_id = 1;
    string user_name = 2;
    string title = 3;
    int32 last_login = 4;
    int32 sex = 5;
    string image_path = 6;
    bool like = 7;
}
